fixed backport issues