@@ -15,15 +15,16 @@ import net.minecraft.client.font.TextRenderer;
 import net.minecraft.client.gui.DrawableHelper;
 import net.minecraft.client.util.InputUtil;
 import net.minecraft.client.util.math.MatrixStack;
+import net.minecraft.client.util.math.Vector3f;
+import net.minecraft.client.util.math.Vector4f;
 import net.minecraft.entity.Entity;
 import net.minecraft.text.*;
 import net.minecraft.util.Formatting;
 import net.minecraft.util.Identifier;
 import net.minecraft.util.math.MathHelper;
-import net.minecraft.util.math.Vec3f;
-import net.minecraft.util.math.Vector4f;
 import org.lwjgl.glfw.GLFW;
 
+import java.util.Arrays;
 import java.util.List;
 
 public class PlayerPopup extends DrawableHelper {
@@ -39,7 +40,7 @@ public class PlayerPopup extends DrawableHelper {
 
     public static PlayerData data;
 
-    private static final List<Text> buttons = List.of(
+    private static final List<Text> buttons = Arrays.asList(
             new TranslatableText("gui.figura.playerpopup.cancel"),
             new TranslatableText("gui.figura.playerpopup.reload"),
             new TranslatableText("gui.figura.playerpopup.increasetrust"),
@@ -51,13 +52,13 @@ public class PlayerPopup extends DrawableHelper {
             return;
 
         matrices.push();
-        RenderSystem.setShaderTexture(0, POPUP_TEXTURE_MINI);
+        MinecraftClient.getInstance().getTextureManager().bindTexture(POPUP_TEXTURE_MINI);
         matrices.translate(-51f, -2f, 0f);
 
         drawTexture(matrices, 0, 0, 0f, 0f, 49, 13, 49, 48);
 
         int color = ConfigManager.ACCENT_COLOR.apply(Style.EMPTY).getColor().getRgb();
-        RenderSystem.setShaderColor(((color >> 16) & 0xFF) / 255f, ((color >>  8) & 0xFF) / 255f, (color & 0xFF) / 255f, 1f);
+        RenderSystem.color4f(((color >> 16) & 0xFF) / 255f, ((color >>  8) & 0xFF) / 255f, (color & 0xFF) / 255f, 1f);
 
         drawTexture(matrices, 0, 0, 0f, 13f, 49, 13, 49, 48);
 
@@ -66,7 +67,7 @@ public class PlayerPopup extends DrawableHelper {
         }
 
         matrices.pop();
-        RenderSystem.setShaderColor(1f, 1f, 1f, 1f);
+        RenderSystem.color4f(1f, 1f, 1f, 1f);
         miniEnabled = true;
     }
 
@@ -86,8 +87,8 @@ public class PlayerPopup extends DrawableHelper {
         matrices.push();
 
         //world to screen space
-        Vec3f worldPos = new Vec3f(entity.getLerpedPos(client.getTickDelta()));
-        worldPos.add(0f, entity.getHeight() + 0.1f, 0f);
+        Vector3f worldPos = new Vector3f(entity.getCameraPosVec(client.getTickDelta()));
+        worldPos.add(0f, 0.1f, 0f);
 
         Vector4f vec = MathUtils.worldToScreenSpace(worldPos);
         if (vec.getZ() < 1) return;
@@ -106,10 +107,10 @@ public class PlayerPopup extends DrawableHelper {
         int color = ConfigManager.ACCENT_COLOR.apply(Style.EMPTY).getColor().getRgb();
 
         //background
-        RenderSystem.setShaderTexture(0, POPUP_TEXTURE);
+        MinecraftClient.getInstance().getTextureManager().bindTexture(POPUP_TEXTURE);
         drawTexture(matrices, -36, -30, 72, 30, 0f, 0f, 72, 30, 72, 96);
 
-        RenderSystem.setShaderColor(((color >> 16) & 0xFF) / 255f, ((color >>  8) & 0xFF) / 255f, (color & 0xFF) / 255f, 1f);
+        RenderSystem.color4f(((color >> 16) & 0xFF) / 255f, ((color >>  8) & 0xFF) / 255f, (color & 0xFF) / 255f, 1f);
         drawTexture(matrices, -36, -30, 72, 30, 0f, 30f, 72, 30, 72, 96);
 
         //icons
@@ -132,7 +133,7 @@ public class PlayerPopup extends DrawableHelper {
 
         //return
         matrices.pop();
-        RenderSystem.setShaderColor(1f, 1f, 1f, 1f);
+        RenderSystem.color4f(1f, 1f, 1f, 1f);
         data.hasPopup = true;
         enabled = true;
     }
@@ -158,22 +159,22 @@ public class PlayerPopup extends DrawableHelper {
             if (badges != null) playerName.append(badges);
 
             switch (index) {
-                case 1 -> {
+                case 1:
                     if (data.hasAvatar() && data.isAvatarLoaded()) {
                         PlayerDataManager.clearPlayer(data.playerId);
                         FiguraMod.sendToast(playerName, "gui.figura.toast.avatar.reload.title");
                     }
-                }
-                case 2 -> {
+                    break;
+                case 2:
                     TrustContainer tc = data.getTrustContainer();
                     if (PlayerTrustManager.increaseTrust(tc))
                         FiguraMod.sendToast(playerName, new TranslatableText("gui.figura.toast.avatar.trust.title").append(new TranslatableText("gui.figura." + tc.parentID.getPath())));
-                }
-                case 3 -> {
-                    TrustContainer tc = data.getTrustContainer();
-                    if (PlayerTrustManager.decreaseTrust(tc))
-                        FiguraMod.sendToast(playerName, new TranslatableText("gui.figura.toast.avatar.trust.title").append(new TranslatableText("gui.figura." + tc.parentID.getPath())));
-                }
+                    break;
+                case 3:
+                    TrustContainer tc2 = data.getTrustContainer();
+                    if (PlayerTrustManager.decreaseTrust(tc2))
+                        FiguraMod.sendToast(playerName, new TranslatableText("gui.figura.toast.avatar.trust.title").append(new TranslatableText("gui.figura." + tc2.parentID.getPath())));
+                    break;
             }
         }
 
